# dokidoc

./: .gitignore  Makefile.am  autogen.pre-hook  configure.ac  dokidoc.m4
docs/: dokidoc.dot.in
docs/draft/: Makefile  dokidoc.dot
src/: Makefile.am
src/dokidoc/: Makefile.am  dokidoc.in
src/dokidoc-base/: Makefile.am
src/dokidoc-filter/: Makefile.am  filtmain.c
src/dokidoc-scan/: Makefile.am  scanmain.c
src/dokidoc-scan/scanner-c/: Makefile.am  base.h  cpp.c  cpp.h  lexer.c  lexer.h  scannerc.h  scannercgram.y  scannercmain.c
src/dokidoc-sgml/: Makefile.am  sgmlmain.c
src/dokidoc-update/: Makefile.am  updatemain.c
src/libdokidoc/: Makefile.am  dokast.c  dokast.h  dokastdumper.c  dokastdumper.h  dokastprocessor.c  dokastprocessor.h  dokastvisitor.c  dokastvisitor.h  dokbase.c  dokbase.h  dokconfig.c  dokconfig.h  dokscanner.c  dokscanner.h  doktemplate.c  doktemplate.h  doktree.c  doktree.h  doktreedumper.c  doktreedumper.h  doktreeload.c  doktreeload.h  doktreetmpldumper.c  doktreetmpldumper.h  doktreevisitor.c  doktreevisitor.h  doktreexmldumper.c  doktreexmldumper.h  doktype.c  doktype.h  dokvisitor.c  dokvisitor.h  dokxmlwriter.c  dokxmlwriter.h  libdokidoc.h
test/: Makefile.am  dokidoc-test-scan.conf.in  dokidoc-test-scan.in  dokidoc-test.in  source1.h  source2.h
test/docs/: Makefile-dummy.in  dokidoc.conf.in
test/docs/tmpl/: source1.tmpl
test/src/: source1.h
test/tmpl/: source1.tmpl  source2.tmpl
tools/: Makefile.am  dokidocize.in
